# ChangeLog for dev-java/javolution
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/javolution/ChangeLog,v 1.17 2014/07/20 06:56:06 ercpe Exp $

  20 Jul 2014; Johann Schmitz <ercpe@gentoo.org> javolution-6.0.0.ebuild:
  Fixed classpath rewriting (bug #517312)

*javolution-6.0.0 (16 Oct 2013)

  16 Oct 2013; Tom Wijsman <TomWij@gentoo.org>
  +files/javolution-6.0.0-javadoc-fix.patch, +javolution-6.0.0.ebuild:
  Version bump to 6.0.0.

  30 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> javolution-4.0.2.ebuild:
  amd64 stable, bug #214776

  28 Mar 2008; nixnut <nixnut@gentoo.org> javolution-4.0.2.ebuild:
  Stable on ppc wrt bug 214766

  28 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  javolution-4.0.2.ebuild:
  stable x86, bug 214776

  19 Jun 2007; Vlastimil Babka <caster@gentoo.org> -javolution-2.2.4.ebuild:
  Remove gen-1 revision.

  19 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  javolution-2.2.4-r1.ebuild:
  stable x86, bug 180288; filter jikes

  17 Jun 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  javolution-2.2.4-r1.ebuild:
  Stable on amd64, bug #180288

  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  javolution-4.0.2.ebuild:
  Added ~ppc, bug #180408

*javolution-2.2.4-r1 (28 Apr 2007)

  28 Apr 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  -javolution-2.2.0.ebuild, +javolution-2.2.4-r1.ebuild,
  -javolution-3.2.4.ebuild:
  Migrate 2.2.4 to generation 2, remove unneeded SLOTs.

*javolution-4.0.2 (24 Apr 2007)

  24 Apr 2007; Vlastimil Babka <caster@gentoo.org> +javolution-4.0.2.ebuild:
  Version bump, new slot.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  15 Jul 2005; Thomas Matthijs <axxo@gentoo.org> javolution-2.2.0.ebuild,
  javolution-2.2.4.ebuild, javolution-3.2.4.ebuild:
  keyword x86

*javolution-2.2.4 (16 Apr 2005)

  16 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> -javolution-1.1.0.ebuild,