@@ -7,18 +7,19 @@ DIST javolution-4.0.2-src.zip 556097 SHA256 fb5256c28b9f1de67e9be2ee3df16ff989f8
 DIST javolution-6.0.0-build.xml.tar.xz 2696 SHA256 2730a3cb2186de011bd1d5349ae151bafd9441c3b584aae1e2429c0774dea04c SHA512 5861e462f24817efec24a784625e240fd4e08117c7b11bf7145f8dae35bb90b0b9fc1e431895ef5d868a1f1d57d96967fd9f39a9b821b51875814f6e118dbdab WHIRLPOOL 69963b313441f8cad2256e62feb2756393aa813bc7cf7589f401eb79fd764f490a737bfa5c4802c2178b92bde51a480b8a1bd2249583042cbabd39d5cfe71f7e
 DIST javolution-6.0.0.tar.xz 1308148 SHA256 0af6f9725d0e50ec323a79c8b726ee01a070d860980c080270a853739e41434a SHA512 86a7a19b13b74cca6ab4871e725a1143d6a1401cc7265390ee66b83f8a9b48f7879b8ccc2d7a3d660e523b64e3779eaf372519ee98268f1bf55df1d7b5a7f034 WHIRLPOOL b4bf337dff963b766a2aa0ad8a3a0c37e9569c14c1fe7acd66bff180c68e40294decb06a6d85add09eab486cb967c89c3224cc467d013fde15e180a823890e8c
 EBUILD javolution-2.2.4-r1.ebuild 902 SHA256 5ab8d390b8f28ad0d4da609ceb29e3f14679c2dbb4f4f02754988d2a71a8d568 SHA512 a801f06934c58d46ade72c3d6f64cf18a343772bdca7a07bbc50790279128727ea9bb281f1203d54fdb05913922251cc599b7cd8ed29856987aecfefc7f407ea WHIRLPOOL 09351ff7144be8ad9f1674a81bba559281fd1d33bf0bf69d5b7d8e771ced8dbf61061120d9d1e8517aa2cc4514185b2551846b0792130ad4fbf31ade170ffb0a
+EBUILD javolution-2.2.4-r2.ebuild 877 SHA256 e6b8fb27b77ae4d433985c53fad7e9e9789545aa0f045acff24fceb28a5c3efb SHA512 80336c669b3fd296fc7a0208fb5d29a828725a2ac84a41eb48e8a0f587b06261e226d87b675e06d1a1720e80b7798d98c19e1443c45a1fff2b825c9bba48f1c7 WHIRLPOOL aca0e172c0ec8c8b6eefc96dedaa1fe4a64a608908e15044dd92b3ff43c09854336b49e9ddbc2855830d0b75d5d70758876181fb830138ea5e6357c6cd62eeb3
 EBUILD javolution-4.0.2.ebuild 909 SHA256 5590cfb0d1496ef8442af803bbef12d032cc32fc7a7b5d79505ed02044569d97 SHA512 5b716ca4c8198d1771896fd1638d79b736155aa21af59f7fbe4365edbabde1e66a2bd7f100d07c9c5ded464ef9c138ed88a7f4ffab080019fc9a437ed5ce0764 WHIRLPOOL bc187977f8a1c354612c32904f9892bbf52303b1ee0650fdc48c35d64380815faec58f6d0b767de6793ee9d938fef5a54ca9ac4667f9e44bb8a1270d82ce2b45
 EBUILD javolution-6.0.0.ebuild 1474 SHA256 797627f843db6cda8782e4e2554577ae92c68e8b11954c4179f9a57cbd35895f SHA512 53d10113a73bbdbcabb2c54db28fb0bd87d21aa9e2efe403572f0ccc847178606ca9e3bcdda828d854bbb6c2f5c8ffbf7fbddeb60d41435299a08b5177cb87f5 WHIRLPOOL 545c944b25959e307ba113c1021d33ee5d3d3db732e332547ea6966cc0576bcaa2c9e5f5547c0edafd69046e0ed9a85d9364f3dfd70fef4f983af420c4991067
-MISC ChangeLog 2731 SHA256 16238e7dc5d99bf2284d6a67b63a877c1b5a71912bc6125608c1634fd56090f9 SHA512 3a363e60b57cbe806df4ff05cde8450a99e2ef36c7c75967f824212856bc3710cec9a9edde734adf7ed4d1baa6a6cad142cc21664636e69634eb13dd8991c96f WHIRLPOOL 96361b0fc2f96b3378cc854c98f3a279fff9c946f8335d90aea496641653cf5b033b3c996d478a4072468fc62fbe2db0b4e57d0b82fb5d4447fed7916ad0a4c7
+MISC ChangeLog 2868 SHA256 b2603c21f083d3422978f87325b4a5f16cc17bc679a8c7ca1984fe995980b17a SHA512 f24da1082145bf7d53d60689cd3023523eb838f81aeed88f43a5e1a534428b9f37271c5ad4491bc093c8dc78a5c13821b7964befe2caf7f01ecf453daf4b0d9d WHIRLPOOL fcb311826fea2f52ba9704cb4dc75439375168ae6146abef03ba36778ed596182bf6517d070230fd13ec059deb626d543838de37639a19f0c1876fed89f3dbbb
 MISC metadata.xml 158 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb SHA512 54f88fc3270968439ba87295b04365a89101c55d33a8c209a56036dc60244e5c73f78ec09484b3e5af28de9dee2159b1dab670cbd5d80a9e0c4543145c0390a3 WHIRLPOOL fcffc4fb6751b5a6eec33aa833f9d7dea0168d3ab67f7e34565370f92fd917ed882bcc57585481bf4d31e601f83a592d99d1c3f50fc793f1c38cd174cc8b2f26
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTy2gLAAoJEKCEBkJ3xQHtCb0H/1kYJfSRzPjRbr2QvkXL4xxj
-PdgCU1yIUFpXu5QE/Adoef5uuT/IIy+IVdR/0mS/QeIhsfsFTBmk1HdDa0xPHG+u
-q0p8s2wmolYUZxLazcTV+dy7fYK3yY8xsteMW4Pt0g3cIS365CVwBJvFbtbGc6Nd
-UWfdZH0ecj+fYK2NltQ4uhGtcVeh+IzAFPQPrDttKbZJa+V1ELg3Nib1Sw2n8FKs
-Jgc5uJIXnCzynlrY/8Q7nWD5LvJJOAiiY8FRL60ZIqJ6nwNIPVisWehB3ckBQ6Es
-oMO3acHa2WDRq572n4BIYiSGmmGF2kuXSnige05dGBIl1BlPdhqWoLrieePQHbc=
-=Zl32
+iQEcBAEBCAAGBQJUDB3/AAoJEKCEBkJ3xQHtUWEH/2JGgeEqsV7F/wTENVuhxbpa
+P3gs/4ugv9ZFjZojxliKrVvXTl80uh+nPmWSzNIhNOieAu/eB+HtFDmfjh1FReYc
+tsenPLSNqTr50PkMH3DcxnzRkIRBd64JuiB1JqTTZb+nt8/OAidWMFFzL2FTjwgF
+fXHheMk5UrD3Dvlyoaw0Gbf1xoTQY9akX6oml58Qn256vQEUvg7kStlo+EPX+IRq
+Ezdr0F1QoIK6Tq0XDxpHD7Bz089FYDkobWIhhl5m9/3lPqm9KuAk8WZAxN6jld4Y
+WnhxVm108FL5gZS6g+PJRHTdYyu1CHmT8By8uYs0/NZ9lGV01MM+b5dIkHW92/E=
+=PHuU
 -----END PGP SIGNATURE-----
