@@ -4,9 +4,9 @@ DESCRIPTION=Unreal Tournament 2003 Linux Dedicated Server
 HOMEPAGE=http://www.ut2003.com/
 KEYWORDS=amd64 x86
 LICENSE=ut2003
-RDEPEND=sys-libs/glibc amd64? ( app-emulation/emul-linux-x86-compat ) games-misc/games-envd
+RDEPEND=games-misc/games-envd
 RESTRICT=mirror strip
 SLOT=0
 SRC_URI=http://games.gci.net/pub/UT2003/ut2003-lnxded-2225.tar.bz2 mirror://3dgamers/unrealtourn2/ut2003-lnxded-2225.tar.bz2 http://downloads.unrealadmin.org/UT2003/Server/Linux/ut2003-lnxded-2225.tar.bz2 mirror://gentoo/UT2003CrashFix.zip http://download.factoryunreal.com/mirror/UT2003CrashFix.zip
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	06133990e861be0fe60c2b428fd025d9	games	e221fed675714bd5545b7488aed9f822	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=49d8945dfc0edba69f4065bb422b2e2f
+_md5_=781afe6cc86c80f7100f8673d8967db0
