@@ -1,6 +1,9 @@
 # ChangeLog for games-server/ut2003-ded
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-server/ut2003-ded/ChangeLog,v 1.15 2013/01/25 07:41:28 tupone Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-server/ut2003-ded/ChangeLog,v 1.16 2014/09/07 08:36:04 ulm Exp $
+
+  07 Sep 2014; Ulrich Müller <ulm@gentoo.org> ut2003-ded-2225-r2.ebuild:
+  QA: Remove unnecessary dependency on emul-linux-x86-compat, bug 522134.
 
   25 Jan 2013; Tupone Alfredo <tupone@gentoo.org> ut2003-ded-2225-r2.ebuild:
   Use QA_PREBUILT. Bug #430828 by Diego
