@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/javolution
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javolution/ChangeLog,v 1.17 2014/07/20 06:56:06 ercpe Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javolution/ChangeLog,v 1.18 2014/09/07 08:57:30 ercpe Exp $
+
+*javolution-2.2.4-r2 (07 Sep 2014)
+
+  07 Sep 2014; Johann Schmitz <ercpe@gentoo.org> +javolution-2.2.4-r2.ebuild:
+  EAPI bump, minor qa
 
   20 Jul 2014; Johann Schmitz <ercpe@gentoo.org> javolution-6.0.0.ebuild:
   Fixed classpath rewriting (bug #517312)
